force-app/main/default/objects/DOZISF__Complete_Setting__c/DOZISF__Complete_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Complete Setting</label>
</CustomObject>