force-app/main/default/objects/DOZISF__Complete_Setting__c/fields/DOZISF__Account_Query_1__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Account_Query_1__c</fullName>
    <label>Account Query 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>