force-app/main/default/objects/DOZISF__Complete_Setting__c/fields/DOZISF__Contact_Query_1__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact_Query_1__c</fullName>
    <label>Contact Query 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>