force-app/main/default/objects/DOZISF__Complete_Setting__c/fields/DOZISF__Lead_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Lead_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Enabled</label>
    <type>Checkbox</type>
</CustomField>